<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AAD3CF"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="64dp"
        android:layout_height="33dp"
        android:gravity="center"
        android:text="@string/cpu"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/CPUScore"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="160dp"
        android:layout_height="37dp"
        android:layout_marginTop="256dp"
        android:gravity="center|center_horizontal"
        android:text="@string/select_player"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ChooseX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="36dp"
        android:onClick="setPlayerSign"
        android:text="@string/x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/ChooseY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="36dp"
        android:onClick="setPlayerSign"
        android:text="@string/o"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/startGame"
        android:layout_width="374dp"
        android:layout_height="47dp"
        android:layout_marginTop="52dp"
        android:onClick="startGame"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ChooseX" />

    <TextView
        android:id="@+id/PlayerScore"
        android:layout_width="65dp"
        android:layout_height="33dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/CPUScore"
        android:layout_width="65dp"
        android:layout_height="33dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="64dp"
        android:layout_height="33dp"
        android:gravity="center"
        android:text="@string/player"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/PlayerScore"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>